--- a/posts/07-09-2019-Tanzania.md
+++ b/posts/07-09-2019-Tanzania.md
@@ -6,4 +6,4 @@ This is a _new page_ to test if the site is working.
 console.log("This might be used for a lot of thing");
 ```
 
-!["Logo Title Text 1"](./images/icon48.png)
+!["Tanzania"](./images/tanzania_1.jpg)
