--- a/posts/11-11-2009-Thailand.md
+++ b/posts/11-11-2009-Thailand.md
@@ -5,3 +5,5 @@ This is a _new page_ to test if the site is working.
 ```js
 console.log("This might be used for a lot of thing");
 ```
+
+!["Logo Title Text 1"](./images/thailand_1.jpg)
