--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -42,7 +42,7 @@ As any other capital in the World, Dublin has a lot of things to do/visit.
 ### Kilmainham Gaol
 This is an old prison that stayed in Ireland history because it housed many famous figures in the fight for Irish independence, including Thomas Francis Meagher and James Connolly. It was also the site for several executions and hangings.
 
-![Kilmainham Gaol](./images/Ireland/kilmainham_gaol.jpg)
+![Kilmainham Gaol](images/Ireland/kilmainham_gaol.jpg)
 
 As in any visit to an old prison, the athmosphere is a bit heavy. But it's totally worth it. Don't worry, you won't feel sick even if you're quite sensitive. Nevertheless, get ready for some shocking stories.
 
