--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -1,7 +1,7 @@
 # 11 Days around Ireland (including 1 day Northern Ireland)
 
 ## How to get around in Ireland
-It depends where you want to go. Within Dublin the metro system is very good and it takes you almost everywhere. DO NOT (and I really mean it) think of renting a car while in Dublin. It's really messy and you'll end up just getting stuck in transit.
+It depends where you want to go. Within Dublin the [tram system](https://www.dublinpublictransport.ie/dublin-trams), they call it LUNA,  is quite good and it takes you almost everywhere. **DO NOT** (and I really mean it) think of renting a car while in Dublin. It's really messy and you'll end up just getting stuck in transit.
 On the other hand, **once you leave Dublin you really ought to rent a car**. It's really easy. Just go to any of the car rental services. You can find them in several places, being the easiest one the airport itself.
 
 ## How to get to the city centre from the airport (and vice-versa)
@@ -9,41 +9,35 @@ There are several [shuttle companies](https://www.dublinairport.com/to-from-the-
 
 ## Expenses
 Ireland is not a cheap country. We spent around 2700€ for 11 days (two people), which included:
-* Accommodations: 900€ (at best, included breakfast)
-* Car Rental: 344€ through Budget Rent for 7 days (Sunday to Saturday)
+* Accommodations: 900€ (some included breakfast)
+* Car Rental: 344€ through Budget Rent for 7 days (Sunday to Saturday) for a Seat Ibiza
 
 ## Our Itinerary
-Day 1 - Arrival at Dublin. Visit Dublin
+Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](./13-04-2017-Dublin.md.html#kilmainham-gaol)
 
-Day 2 - Visit Dublin
+Day 2 - Visit Dublin: [Christ Church Cathedral](./13-04-2017-Dublin.md.html#christ-church-cathedral) and [Dublinia](./13-04-2017-Dublin.md.html#Dublinia) in the morning, [Trinity College](./ireland/13-04-2017-Dublin.md.html#Trinity-College) and [Dublin Castle](./13-04-2017-Dublin.md.html#dublin-castle) in the afternoon
 
-Day 3 - Day tour to Northern Ireland
+Day 3 - Day tour to Northern Ireland: Visit Belfast, Giant's Causeway and Carrick-a-Rede bridge
 
-Day 4 - Visit Dublin. Rent car and drive to Galway
+Day 4 - Visit Dublin. Rent car and drive to Galway: walk around Galway
 
 Day 5 - Day tour to Cliffs of Moher
 
-Day 6 - Drive to Limerick (quick visit). Drive to Killarney.
+Day 6 - Drive to Limerick (visit the castle). Drive to Killarney (with several stops for pictures)
 
-Day 7 -  Road trip around Dingle Pensinsule
+Day 7 -  Road trip around Dingle Pensinsula
 
-Day 8 - Visit Cashel Rock
+Day 8 - Visit Blarney Castle
 
-Day 9 - Drive to Cork
+Day 9 - Visit Cashel Rock. Drive to Cork. Visit Cork (TODO)
 
-Day 10 - Drive to Dublin. Stop by Kilkenny
+Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](./13-04-2017-Dublin.md.html#Trinity-College)
 
-Day 11 - Fly back to Porto, Portugal
+Day 11 - Visit Dublin: [St. Patrick's Cathedral](./13-04-2017-Dublin.md.html#st-patricks-cathedral). Fly back to Porto, Portugal
 
+Of course a lot was left undone, but we always goood to have an excuse to come back in the future :D
 
-## Dublin
-As any other capital in the World, Dublin has a lot of things to do/visit.
+By the way, if you're wondering if you should take your kids here, the answer is yes. It's quite a children friendly trip.
 
-### Kilmainham Gaol
-This is an old prison that stayed in Ireland history because it housed many famous figures in the fight for Irish independence, including Thomas Francis Meagher and James Connolly. It was also the site for several executions and hangings.
-
-![Kilmainham Gaol](./images/Ireland/kilmainham_gaol.jpg)
-
-As in any visit to an old prison, the athmosphere is a bit heavy. But it's totally worth it. Don't worry, you won't feel sick even if you're quite sensitive. Nevertheless, get ready for some shocking stories.
-
-How to get here
+## What I would have done differently
+I would have skipped Cork altogether. It's a gray city without anything to show for it and I really didn't like it (I don't mean to offend anyone, it's just my opinion :D). Instead of Cork, on my way to Dublin, I would have stayed in Kilkenny, which was a small but pictoresque town.
