--- a/posts/13-04-2017-Dublin.md
+++ b/posts/13-04-2017-Dublin.md
@@ -4,7 +4,7 @@ As any other capital in the World, Dublin has a lot of things to do/visit.
 ## [Kilmainham Gaol](http://kilmainhamgaolmuseum.ie/)
 This is an old prison that stayed in Ireland history because it housed many famous figures in the fight for Irish independence, including Thomas Francis Meagher and James Connolly. It was also the site for several executions and hangings.
 
-![Kilmainham Gaol](../images/ireland/kilmainham_gaol.jpg)
+![Kilmainham Gaol](images/ireland/kilmainham_gaol.jpg)
 
 As in any visit to an old prison, the athmosphere is a bit heavy. But it's totally worth it. Don't worry, you won't feel sick even if you're quite sensitive. Nevertheless, get ready for some shocking stories.
 
@@ -27,7 +27,7 @@ The tour takes 1h but you should allocate 90 minutes as there is a small museum 
 ## [Christ Church Cathedral](https://christchurchcathedral.ie/)
 This is one of the most iconic churches in ireland. It's extremelly beautiful and very well maintained. I really enjoyed going there.
 
-![Christ Church Cathedral](../images/ireland/christ_cathedral.jpg)
+![Christ Church Cathedral](images/ireland/christ_cathedral.jpg)
 
 __How to get there__
 
@@ -53,7 +53,7 @@ __How to get there__
 
 It's right next to the [Christ Church Cathedral](#christ-church-cathedral), with only a "bridge" separating them.
 
-![Dublinia-Cathedral Bridge](../images/ireland/dublinia_bridge.jpg)
+![Dublinia-Cathedral Bridge](images/ireland/dublinia_bridge.jpg)
 
 __How to buy tickets__
 
@@ -68,7 +68,7 @@ They offer (yes, it's an offer) one guided tour a day at 2:30 pm (except on July
 ## [Trinity College](https://www.tcd.ie/visitors/)
 It's one of the highest respected universities in the world and it's surely worth a visit. And not only for the famous Book of Kells (though that's also a must).
 
-![Trinity College](../images/ireland/trinity.jpg)
+![Trinity College](images/ireland/trinity.jpg)
 
 __How to get there__
 
@@ -93,7 +93,7 @@ The schedule depends on the month of the visit so it's better to check [online](
 ## [Dublin Castle](dublincastle.ie)
 It wouldn't be Ireland if there wasn't a castle :D And this one. unlike many others, is in great conditions. You can learn about a time before Ireland became a Republic.
 
-![Dublin Castle](../images/ireland/dublin_castle.jpg)
+![Dublin Castle](images/ireland/dublin_castle.jpg)
 
 __How to get here__
 The center of Dublin is quite small, so it you're near one thing you're near everything (the exception goes to [Kilmainham Gaol](#kilmainham-gaol)). Regardless you can find its precise looking on their [site](http://www.dublincastle.ie/how-to-find-us/).
@@ -112,7 +112,7 @@ TODO
 ## Other places to visit in Dublin
 There are a ton of bars in Dublin but the most famous one is definitely the *Temple Bar*. You'll see its name written in several places but there's only a real one (will the real Temple Bar please stand up?).
 
-![Temple Bar](../images/ireland/temple_bar.jpg)
+![Temple Bar](images/ireland/temple_bar.jpg)
 
 At night it's quite impossible to stay inside, but I think it's a must to at least check it out. I honestly don't drink and no one in my group (we were five while in Dublin and then got reduced to 2) is a heavy drinker. But we had to check it out. Afterwards, we went to another bar where we could find a place to sit and drink a Pint (at least the rest of the group did).
 
@@ -120,4 +120,4 @@ There are obviously a lot more to see in Dublin. For instance, three of the four
 
 You should also check out the Molly Malone Statue.
 
-![Molly Malone](../images/ireland/molly_malone.jpg)
+![Molly Malone](images/ireland/molly_malone.jpg)
