--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -13,9 +13,9 @@ Ireland is not a cheap country. We spent around 2700€ for 11 days (two people)
 * Car Rental: 344€ through Budget Rent for 7 days (Sunday to Saturday) for a Seat Ibiza
 
 ## Our Itinerary
-Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](13-04-2017-Dublin.md.html#kilmainham-gaol)
+Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](./13-04-2017-Dublin.md.html#kilmainham-gaol)
 
-Day 2 - Visit Dublin: [Christ Church Cathedral](13-04-2017-Dublin.md.html#christ-church-cathedral) and [Dublinia](13-04-2017-Dublin.md.html#Dublinia) in the morning, [Trinity College](ireland/13-04-2017-Dublin.md.html#Trinity-College) and [Dublin Castle](13-04-2017-Dublin.md.html#dublin-castle) in the afternoon
+Day 2 - Visit Dublin: [Christ Church Cathedral](./13-04-2017-Dublin.md.html#christ-church-cathedral) and [Dublinia](./13-04-2017-Dublin.md.html#Dublinia) in the morning, [Trinity College](./13-04-2017-Dublin.md.html#Trinity-College) and [Dublin Castle](./13-04-2017-Dublin.md.html#dublin-castle) in the afternoon
 
 Day 3 - Day tour to Northern Ireland: Visit Belfast, Giant's Causeway and Carrick-a-Rede bridge
 
@@ -31,9 +31,9 @@ Day 8 - Visit Blarney Castle
 
 Day 9 - Visit Cashel Rock. Drive to Cork. Visit Cork (TODO)
 
-Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](13-04-2017-Dublin.md.html#Trinity-College)
+Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](./13-04-2017-Dublin.md.html#Trinity-College)
 
-Day 11 - Visit Dublin: [St. Patrick's Cathedral](13-04-2017-Dublin.md.html#st-patricks-cathedral). Fly back to Porto, Portugal
+Day 11 - Visit Dublin: [St. Patrick's Cathedral](./13-04-2017-Dublin.md.html#st-patricks-cathedral). Fly back to Porto, Portugal
 
 Of course a lot was left undone, but we always goood to have an excuse to come back in the future :D
 
