Add page about Northern Ireland

--- a/posts/13-04-2017-Dublin.md
+++ b/posts/13-04-2017-Dublin.md
@@ -4,7 +4,7 @@ As any other capital in the World, Dublin has a lot of things to do/visit.
 ## [Kilmainham Gaol](http://kilmainhamgaolmuseum.ie/)
 This is an old prison that stayed in Ireland history because it housed many famous figures in the fight for Irish independence, including Thomas Francis Meagher and James Connolly. It was also the site for several executions and hangings.
 
-![Kilmainham Gaol](images/ireland/kilmainham_gaol.jpg)
+![Kilmainham Gaol](images/Ireland/kilmainham_gaol.jpg)
 
 As in any visit to an old prison, the athmosphere is a bit heavy. But it's totally worth it. Don't worry, you won't feel sick even if you're quite sensitive. Nevertheless, get ready for some shocking stories.
 
@@ -27,7 +27,7 @@ The tour takes 1h but you should allocate 90 minutes as there is a small museum 
 ## [Christ Church Cathedral](https://christchurchcathedral.ie/)
 This is one of the most iconic churches in ireland. It's extremelly beautiful and very well maintained. I really enjoyed going there.
 
-![Christ Church Cathedral](images/ireland/christ_cathedral.jpg)
+![Christ Church Cathedral](images/Ireland/christ_cathedral.jpg)
 
 __How to get there__
 
@@ -53,7 +53,7 @@ __How to get there__
 
 It's right next to the [Christ Church Cathedral](#christ-church-cathedral), with only a "bridge" separating them.
 
-![Dublinia-Cathedral Bridge](images/ireland/dublinia_bridge.jpg)
+![Dublinia-Cathedral Bridge](images/Ireland/dublinia_bridge.jpg)
 
 __How to buy tickets__
 
@@ -68,7 +68,7 @@ They offer (yes, it's an offer) one guided tour a day at 2:30 pm (except on July
 ## [Trinity College](https://www.tcd.ie/visitors/)
 It's one of the highest respected universities in the world and it's surely worth a visit. And not only for the famous Book of Kells (though that's also a must).
 
-![Trinity College](images/ireland/trinity.jpg)
+![Trinity College](images/Ireland/trinity.jpg)
 
 __How to get there__
 
@@ -93,7 +93,7 @@ The schedule depends on the month of the visit so it's better to check [online](
 ## [Dublin Castle](dublincastle.ie)
 It wouldn't be Ireland if there wasn't a castle :D And this one. unlike many others, is in great conditions. You can learn about a time before Ireland became a Republic.
 
-![Dublin Castle](images/ireland/dublin_castle.jpg)
+![Dublin Castle](images/Ireland/dublin_castle.jpg)
 
 __How to get here__
 The center of Dublin is quite small, so it you're near one thing you're near everything (the exception goes to [Kilmainham Gaol](#kilmainham-gaol)). Regardless you can find its precise looking on their [site](http://www.dublincastle.ie/how-to-find-us/).
@@ -106,13 +106,31 @@ The opening hours are from 9:45 to 17:45 and it closes on 25, 26 and 27 of Decem
 __Guided tour__
 You can join a guided tour for 12€ (admission fee already included) and I highly recommend it. It takes 60 minutes and it includes the State Apartments, Medieval Section and Chapel Royal. Again, when I visited it wasn't possible to buy the tickets online and we had no problems getting a tour. However, you can [prebook it](https://dublincastle.admit-one.eu/?&language=ENG) if you wish to be on the safe side.
 
-## St Patricks Cathedral
-TODO
+## [St Patricks Cathedral](https://www.stpatrickscathedral.ie/visit/)
+Even though it's the seat of the bishop, the Church of Ireland considers St. Patrick's Cathedral as the country's national cathedral. It's the tallest chruch (not cathedral) of Ireland and its most famous office holder was Jonathan Swift, the author of *Gulliver's Travels*. It's currently still a working church.
+
+![St. Patrick's Cathedral](images/Ireland/st_patricks_cathedral.jpg)
+
+__How to get there__
+
+It's a 10 minute walk from the city center, at the junction of Patrick Street and Upper Kevin Street. There are several buses that stop right next to it. The closest lua stop is St. Stephen's Green, 10 minutes on foot away.
+
+I would say go on foot and enjoy the view.
+
+__How to buy tickets__
+
+Tickets can be bought on site for 8€ or [online](https://stpatrickscathedral.digitickets.co.uk/event-tickets/6314?catID=5860&) for 7.5€. When buying online you have to select the half an hour slot in which you wish to enter. There is no need to book online (except for the 0.50€ saving) as there are actually no lines (at least there weren't when I was there).
+
+The opening times depend on the month of the year so it's better to check [online](https://www.stpatrickscathedral.ie/visit/).
+
+__Guided tour__
+
+There are no guided tours. However, there is an audio guide available, which I highly advise.
 
 ## Other places to visit in Dublin
 There are a ton of bars in Dublin but the most famous one is definitely the *Temple Bar*. You'll see its name written in several places but there's only a real one (will the real Temple Bar please stand up?).
 
-![Temple Bar](images/ireland/temple_bar.jpg)
+![Temple Bar](images/Ireland/temple_bar.jpg)
 
 At night it's quite impossible to stay inside, but I think it's a must to at least check it out. I honestly don't drink and no one in my group (we were five while in Dublin and then got reduced to 2) is a heavy drinker. But we had to check it out. Afterwards, we went to another bar where we could find a place to sit and drink a Pint (at least the rest of the group did).
 
@@ -120,4 +138,4 @@ There are obviously a lot more to see in Dublin. For instance, three of the four
 
 You should also check out the Molly Malone Statue.
 
-![Molly Malone](images/ireland/molly_malone.jpg)
+![Molly Malone](images/Ireland/molly_malone.jpg)
