--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -13,6 +13,10 @@ Ireland is not a cheap country. We spent around 2700€ for 11 days (two people)
 * Car Rental: 344€ through Budget Rent for 7 days (Sunday to Saturday) for a Seat Ibiza
 
 ## Our Itinerary
+In April 2017, we took a road trip around Ireland. We visited Dublin for 4 days as a family of 5 and then my boyfriend and I stayed for one more week and took a road trip around the bottom half of Ireland.
+
+This was our itinerary:
+
 Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](13-04-2017-Dublin.md#kilmainham-gaol)
 
 Day 2 - Visit Dublin: [Christ Church Cathedral](13-04-2017-Dublin.md#christ-church-cathedral) and [Dublinia](13-04-2017-Dublin.md#Dublinia) in the morning, [Trinity College](13-04-2017-Dublin.md#Trinity-College) and [Dublin Castle](13-04-2017-Dublin.md#dublin-castle) in the afternoon
