Add places where to sleep in Dublin

--- a/posts/13-04-2017-Dublin.md
+++ b/posts/13-04-2017-Dublin.md
@@ -139,3 +139,19 @@ There are obviously a lot more to see in Dublin. For instance, three of the four
 You should also check out the Molly Malone Statue.
 
 ![Molly Malone](images/Ireland/molly_malone.jpg)
+
+## Where to Sleep
+Obviously there are tons of places where to sleep in Dublin. As we were staying long, We really wanted a central place so we didn't lose time in travelling. One of the most important aspects whenever we're looking for a place is its reviews, if the reviews are not (at least) decent (7 in 10 in Booking) or if it has too few reviews then we don't consider it (unless we're really on a budget and it's really really cheap). We also try to keep it as cheap as possible (considering the first two filters).
+
+**Neightbourhood**
+
+The Temple Bar area is a great place to stay. It's central and honestly we didn't have any problems regarding noise.
+
+**My Suggestions**
+
+We stayed in Dublin both on the first 3 nights (we were 5 people and we needed 2 bedrooms) and on the last night (we were only 2, a couple, by this point).
+Both were booked with Airbnb as we found the ones in Booking too expensive for us.
+
+The first one (for 5) was a nice apartment 1 minute on foot from the Temple Bar. You can find it [here](https://www.airbnb.com/rooms/3096382?source_impression_id=p3_1568073724_tiP0mQwB%2BMW%2BXeb7). The host, Sean, was very helpful and the place was great. It was 280€ a night but, I'll repeat, we were 5, so it was 56€ per night p.p.. It's anything but cheap but hey, it's Ireland, nothing is cheap.
+
+On the second time, we only booked a room (withing another couple's home). But it was great. The appartment was a duplex and the bedrooms and WC were on the bottom floor (with access from the street) and the kitchen and living room (to which we didn't have access) were on the upper floor. So the owners could be home while we were in our room and we wouldn't cross paths. You can find it [here](https://www.airbnb.com/rooms/6937395?source_impression_id=p3_1568074359_WRU%2FpzVt10ufnlKG). It was 126.7€ a night (for both).
