--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -1,5 +1,11 @@
 # 11 Days around Ireland (including 1 day Northern Ireland)
 
+On April 2017 my boyfriend and I decided to make a road trip throughout Ireland. We spent 11 days there divided by 3 in Dublin, 1 in Northern Ireland and 7 going from Galway to Dublin through the South.
+
+I hope this helps you organise your own trip through this AMAZING country.
+
+![Ireland](images/Ireland/cliffs_moher.jpg)
+
 ## How to get around in Ireland
 It depends where you want to go. Within Dublin the [tram system](https://www.dublinpublictransport.ie/dublin-trams), they call it LUNA,  is quite good and it takes you almost everywhere. **DO NOT** (and I really mean it) think of renting a car while in Dublin. It's really messy and you'll end up just getting stuck in transit.
 On the other hand, **once you leave Dublin you really ought to rent a car**. It's really easy. Just go to any of the car rental services. You can find them in several places, being the easiest one the airport itself.
