Update links for more recent posts

--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -23,13 +23,13 @@ In April 2017, we took a road trip around Ireland. We visited Dublin for 4 days 
 
 This was our itinerary:
 
-Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](13-04-2017-Dublin.md#kilmainham-gaol)
+Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](trips/13-04-2017-Dublin.md#kilmainham-gaol)
 
 Day 2 - Visit Dublin: [Christ Church Cathedral](13-04-2017-Dublin.md#christ-church-cathedral) and [Dublinia](13-04-2017-Dublin.md#Dublinia) in the morning, [Trinity College](13-04-2017-Dublin.md#Trinity-College) and [Dublin Castle](13-04-2017-Dublin.md#dublin-castle) in the afternoon
 
-Day 3 - Day tour to Northern Ireland: Visit Belfast, Giant's Causeway and Carrick-a-Rede bridge
+Day 3 - Day tour to [Northern Ireland](13-04-2017-Northern-Ireland.md): Visit [Belfast](13-04-2017-Northern-Ireland.md#black-taxi-tour), [Giant's Causeway](13-04-2017-Northern-Ireland.md#giants-causeway) and [Carrick-a-Rede bridge](13-04-2017-Northern-Ireland.md#carrick-a-rede-bridge)
 
-Day 4 - Visit Dublin. Rent car and drive to Galway: walk around Galway
+Day 4 - Visit Dublin. Rent car and drive to [Galway](13-04-2017-Galway.md): walk around Galway
 
 Day 5 - Day tour to Cliffs of Moher
 
