--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -25,11 +25,11 @@ This was our itinerary:
 
 Day 1 - Arrival at Dublin. Visit Dublin: [Kilmainham Gaol](trips/13-04-2017-Dublin.md#kilmainham-gaol)
 
-Day 2 - Visit Dublin: [Christ Church Cathedral](13-04-2017-Dublin.md#christ-church-cathedral) and [Dublinia](13-04-2017-Dublin.md#Dublinia) in the morning, [Trinity College](13-04-2017-Dublin.md#Trinity-College) and [Dublin Castle](13-04-2017-Dublin.md#dublin-castle) in the afternoon
+Day 2 - Visit Dublin: [Christ Church Cathedral](trips/13-04-2017-Dublin.md#christ-church-cathedral) and [Dublinia](trips/13-04-2017-Dublin.md#Dublinia) in the morning, [Trinity College](trips/13-04-2017-Dublin.md#Trinity-College) and [Dublin Castle](trips/13-04-2017-Dublin.md#dublin-castle) in the afternoon
 
-Day 3 - Day tour to [Northern Ireland](13-04-2017-Northern-Ireland.md): Visit [Belfast](13-04-2017-Northern-Ireland.md#black-taxi-tour), [Giant's Causeway](13-04-2017-Northern-Ireland.md#giants-causeway) and [Carrick-a-Rede bridge](13-04-2017-Northern-Ireland.md#carrick-a-rede-bridge)
+Day 3 - Day tour to [Northern Ireland](trips/13-04-2017-Northern-Ireland.md): Visit [Belfast]trips/(13-04-2017-Northern-Ireland.md#black-taxi-tour), [Giant's Causeway](trips/13-04-2017-Northern-Ireland.md#giants-causeway) and [Carrick-a-Rede bridge](trips/13-04-2017-Northern-Ireland.md#carrick-a-rede-bridge)
 
-Day 4 - Visit Dublin. Rent car and drive to [Galway](13-04-2017-Galway.md): walk around Galway
+Day 4 - Visit Dublin. Rent car and drive to [Galway](trips/13-04-2017-Galway.md): walk around Galway
 
 Day 5 - Day tour to Cliffs of Moher
 
@@ -41,9 +41,9 @@ Day 8 - Visit Blarney Castle
 
 Day 9 - Visit Cashel Rock. Drive to Cork. Visit Cork (TODO)
 
-Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](13-04-2017-Dublin.md#Trinity-College)
+Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](trips/13-04-2017-Dublin.md#Trinity-College)
 
-Day 11 - Visit Dublin: [St. Patrick's Cathedral](13-04-2017-Dublin.md#st-patricks-cathedral). Fly back to Porto, Portugal
+Day 11 - Visit Dublin: [St. Patrick's Cathedral](trips/13-04-2017-Dublin.md#st-patricks-cathedral). Fly back to Porto, Portugal
 
 Of course a lot was left undone, but we always goood to have an excuse to come back in the future :D
 
