--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -6,7 +6,7 @@ One thing that stuck with us was the amount of green and of stunning views prese
 
 Trust me, don't count the hours to get to wherever you want to go. Just take your time and enjoy the country. This isn't a trip to rush and trust me you won't feel the need to do regardless of the amount of things we wish to cram into the amount of days we have available.
 
-One of the great aspects of going in April is that it's calving season. If you enjoy lamb then it's perfect. If you only like to watch them, it's even better :
+One of the great aspects of going in April is that it's calving season. If you enjoy lamb then it's perfect. If you only like to watch them, it's even better.
 
 ![Sheep Sucking on their mother](images/Ireland/sheeps.jpg)
 
@@ -54,11 +54,10 @@ Day 4 - Walk around [Dublin](trips/13-04-2017-Dublin.md) in the morning. Rent ca
 
 Day 5 - Day tour to [Cliffs of Moher](trips/13-04-2017-Galway.md#cliffs-of-moher)
 
-Day 6 - Drive to [Limerick](trips/13-04-2017-Limerick.md) (visit the castle). Drive to Killarney (with several stops for pictures)
+Day 6 - Drive to [Limerick](trips/13-04-2017-Limerick.md) (visit the castle). 
+Road trip around [Dingle Pensinsula](trips/13-04-2017-Killarney.md#dingle-peninsula). Drive to [Killarney](trips/13-04-2017-Killarney.md).
 
-Day 7 - Road trip around Dingle Pensinsula
-
-Day 8 - Visit Blarney Castle
+Day 7 - Road trip around the [Ring of Kerry](trips/13-04-2017-Killarney.md#ring-of-kerry). Visit [Blarney Castle](trips/13-04-2017-Killarney.md#blarney-castle). Overnight at Killarney
 
 Day 9 - Visit Cashel Rock. Drive to Cork. Visit Cork (TODO)
 
@@ -66,7 +65,7 @@ Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Tri
 
 Day 11 - Visit [Dublin](trips/13-04-2017-Dublin.md) in the morning: [St. Patrick's Cathedral](trips/13-04-2017-Dublin.md#st-patricks-cathedral). Fly back to Porto, Portugal
 
-Of course a lot was left undone, but we always goood to have an excuse to come back in the future :D
+Of course a lot was left undone, but we always goood to have an excuse to come back in the future :D I must add that having been there in late April the days were already quite long and at 8 or 9 pm the sun was still up.
 
 By the way, if you're wondering if **you should take your kids here**, the answer is yes. It's quite a children friendly trip.
 
