Complete Blarney Castle

--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -57,9 +57,11 @@ Day 5 - Day tour to [Cliffs of Moher](trips/13-04-2017-Galway.md#cliffs-of-moher
 Day 6 - Drive to [Limerick](trips/13-04-2017-Limerick.md) (visit the castle). 
 Road trip around [Dingle Pensinsula](trips/13-04-2017-Killarney.md#dingle-peninsula). Drive to [Killarney](trips/13-04-2017-Killarney.md).
 
-Day 7 - Road trip around the [Ring of Kerry](trips/13-04-2017-Killarney.md#ring-of-kerry). Visit [Blarney Castle](trips/13-04-2017-Killarney.md#blarney-castle). Overnight at Killarney
+Day 7 - Road trip around the [Ring of Kerry](trips/13-04-2017-Killarney.md#ring-of-kerry). Visit [Muckross House](trips/13-04-2017-Killarney.md#muckross-house). Overnight at Killarney
 
-Day 9 - Visit Cashel Rock. Drive to Cork. Visit Cork (TODO)
+Day 8 - Visit [Killarney's Cathedral](trips/13-04-2017-Killarney.md#saint-marys-cathedral). Visit the [Blarney Castle](trips/13-04-2017-Killarney.md#blarney-castle). Overnight at Killarney
+
+Day 9 - Visit Cashel Rock. Drive to Cork. Visit [Cork](trips/13-04-2017-Cork.md) (TODO)
 
 Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](trips/13-04-2017-Dublin.md#Trinity-College)
 
