--- a/posts/13-04-2017-Ireland.md
+++ b/posts/13-04-2017-Ireland.md
@@ -61,9 +61,9 @@ Day 7 - Road trip around the [Ring of Kerry](trips/13-04-2017-Killarney.md#ring-
 
 Day 8 - Visit [Killarney's Cathedral](trips/13-04-2017-Killarney.md#saint-marys-cathedral). Visit the [Blarney Castle](trips/13-04-2017-Killarney.md#blarney-castle). Overnight at Killarney
 
-Day 9 - Visit Cashel Rock. Drive to Cork. Visit [Cork](trips/13-04-2017-Cork.md) (TODO)
+Day 9 - Visit [Rock of Cashel](trips/13-04-2017-Cork.md#rock-of-cashel). Drive to Cork. Walk around [Cork](trips/13-04-2017-Cork.md)
 
-Day 10 - Drive to Kilkenny (quick visit). Drive to Dublin: Book of Kells at [Trinity College](trips/13-04-2017-Dublin.md#Trinity-College)
+Day 10 - Drive to [Kilkenny](trips/13-04-2017-Kilkenny.md) (quick visit). Drive to Dublin: Book of Kells at [Trinity College](trips/13-04-2017-Dublin.md#Trinity-College)
 
 Day 11 - Visit [Dublin](trips/13-04-2017-Dublin.md) in the morning: [St. Patrick's Cathedral](trips/13-04-2017-Dublin.md#st-patricks-cathedral). Fly back to Porto, Portugal
 
